--- a/googlemaps-service-dev.properties
+++ b/googlemaps-service-dev.properties
@@ -8,4 +8,6 @@ spring.datasource.driverClassName=oracle.jdbc.OracleDriver
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.Oracle10gDialect
 spring.jpa.properties.hibernate.show_sql = true
 
-googlemaps-service-info=Development-Env
+googlemaps-service-info=googlemaps started
+
+googlemaps-service-duty=googlemaps navigation is ready
